# py-llm

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
alfred_chroma_db/: chroma.sqlite3
ipynb/unit2.3/: agents.ipynb
ipynb/unit2.3/langGraph/: langgraph.ipynb  langgraphy_2.ipynb
ipynb/unit2.3/llama/: agents.ipynb
unit2.1/: agent-by-funccall.py  calculate_cage_travl.py  calculate_cargo_travel_time.py  def-agent-with-tool.py  langchain-tool.py  main.py  multiple_agents2.py  pyproject.toml  simple_multi[le_agents.py  tool-import.py  tool-langchain.py  vlm_agent1.py  vlm_agents_search.py
unit2.1/tests/: pyproject.toml  ques2.py  smolagents-assister.py
unit2.3/: begin.py  document_embedding.py  document_embedding_store.py  main.py  pyproject.toml  query_engine.py  utils.py
unit2.3/alfred_chroma_db/: chroma.sqlite3
unit2.3/llma-index/: agents_flow.py  def-weather-tool.py  generic_work_flow.py  main.py  mcp_tool.py  pyproject.toml  query_engine_tool.py  tool_space.py
week1/: Tool.py  cal-tool-def.py  example.py  image_create.py  msg2promot.py  tool-dector.py
