[project]
name = "llma-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "huggingface-hub>=0.36.2",
    "llama-index>=0.14.18",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-huggingface>=0.7.0",
    "llama-index-tools-mcp>=0.4.8",
    "llama-index-vector-stores-chroma>=0.5.5",
]
